# voxhelm

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  justfile  lane_scheduler.py  manage.py  pyproject.toml
config/: settings.py  urls.py
evals/: known_speaker_eval.py  known_speaker_results.md  pp62_production_eval.py
jobs/: artifacts.py  media.py  models.py  services.py  staging.py  tasks.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_alter_job_job_type_alter_jobartifact_kind.py  0003_job_dispatch_mode_job_operator_and_more.py  0004_stagedmedia.py  0005_rename_jobs_staged_producer_76b546_idx_jobs_staged_produce_cbe898_idx_and_more.py  0006_alter_jobartifact_kind.py
operators/: forms.py  views.py
specs/: 2026-03-11_voxhelm_service.md  2026-03-12_stt_backend_benchmark_studio.md  2026-03-13_whisperkit_re_evaluation_studio.md  README.md  decision-log.md  delivery-chunks.md  diarization-quality-research.md  implementation-sequence.md  interface-map.md  known-speaker-diarization.md  milestones.md  remote-transcription-workers.md
specs/archive/: 2026-03-11_voxhelm_spec_review_and_chunking.md  README.md  planning-review.md  review-prompt.md  spec-review.md
synthesis/: __init__.py  service.py  views.py
tests/: conftest.py  test_api.py  test_diarization.py  test_jobs.py  test_known_speaker.py  test_lane_scheduler.py  test_media.py  test_operator_ui.py  test_service.py  test_synthesis.py  test_wyoming.py
transcriptions/: diarization.py  errors.py  formats.py  input_media.py  known_speaker.py  observability.py  service.py  views.py  wyoming.py
voxhelm_api/: apps.py  service.py  views.py
voxhelm_project/: asgi.py  settings.py  urls.py  wsgi.py
(+2 files in other folders)
