[project]
name = "voxhelm"
version = "0.1.0"
description = "Shared local transcription service"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "boto3>=1.42.66",
  "Django>=5.2,<5.3",
  "django-tasks>=0.12.0",
  "django-tasks-db>=0.12.0",
  "mlx-whisper; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "piper-tts>=1.4.1,<2; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "uvicorn>=0.35.0",
  "wyoming>=1.8.0,<2",
]

[project.scripts]
voxhelm-wyoming-stt = "transcriptions.wyoming:main"

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]>=5.2.7",
  "mypy>=1.18",
  "pytest>=8.4",
  "pytest-django>=4.11",
  "ruff>=0.13",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"jobs/migrations/*.py" = ["E501", "I001"]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["mlx_whisper"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "jobs", "synthesis", "transcriptions"]
